AWS-Projects/Project-001-Roman-Numerals-Converter/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on Amazon Linux 2 (ami-08d3369bcb1d2d38b) EC2 Instance with custom security group allowing http connections on port 80 and SSH connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
  pKeyName:
    Description: Enter the name of your Key Pair for SSH connection. Work! Work! Work!
    Type: AWS::EC2::KeyPair::KeyName
    
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0022f774911c1d690
      InstanceType: t2.micro
      KeyName: !Ref pKeyName
      SecurityGroupIds:
        -  !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of stack '${AWS::StackName}'
      UserData: 
        Fn::Base64: 
          |
            #! /bin/bash
            yum update -y
            yum install python3 -y
            pip3 install flask
            cd /home/ec2-user
            FOLDER="https://raw.githubusercontent.com/ahadalioglu/my-repository/main/AWS-Projects/Project-001-Roman-Numerals-Converter"
            mkdir templates && cd templates
            wget ${FOLDER}/templates/index.html
            wget ${FOLDER}/templates/result.html
            cd ..
            wget ${FOLDER}/app.py
            python3 app.py &

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
